:sparkles: feat:messaging service with rabbit mq